--- a/Lesson1/ThreadFileReader/ThreadFileReader.csproj
+++ b/Lesson1/ThreadFileReader/ThreadFileReader.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C71EBA1F-6C37-4267-9FB7-EB862CFD2029}</ProjectGuid>
+    <ProjectGuid>{5D0024A1-E891-4D1E-B5E2-85C9D02C10C7}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MultiThread</RootNamespace>
-    <AssemblyName>MultiThread</AssemblyName>
+    <RootNamespace>ThreadFileReader</RootNamespace>
+    <AssemblyName>ThreadFileReader</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
